[project]
name = "time-series-library"
version = "0.1.0"
requires-python = ">=3.9, <3.10"
dependencies = [
    "einops==0.8.0",
    "local-attention==1.9.14",
    "matplotlib==3.7.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "patool==1.12",
    "pywavelets>=1.6.0",
    "reformer-pytorch==1.4.4",
    "scikit-learn==1.2.2",
    "scipy==1.10.1",
    "sktime==0.16.1",
    "sympy==1.13.3",
    "tqdm==4.64.1",
    "torch==2.7.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
